# infotabor-2023

./: .gitignore
TvRemote/controller/: package.json  pnpm-lock.yaml
TvRemote/controller/src/: index.ts
TvRemote/pico-relay/: Cargo.toml  flash.sh
TvRemote/pico-relay/src/: main.rs
kezdo-robotika/: README.md
kezdo-robotika/gpio/: led.py  motor.py  servo.py  teszt.py
kezdo-robotika/microbit/: controller.ts  install.sh  receiver.ts  shooter.ts
kezdo-robotika/roblib/: package.json  pnpm-lock.yaml
kezdo-robotika/roblib/src/: index.js  pi.js  track.js  track_bm.js  wasd.js
kezdo-robotika/roland-microbit/: package.json  pnpm-lock.yaml
kezdo-robotika/roland-microbit/src/: index.js
line/: Cargo.toml
line/src/: main.rs
roblib-ctrl/: README.md  flake.nix
roblib-ctrl/controller/: Cargo.toml
roblib-ctrl/controller/src/: main.rs
roblib-ctrl/pico-relay/: Cargo.toml  Dockerfile  build.sh
roblib-ctrl/pico-relay/src/: main.rs
roblib-tui/: Cargo.toml
roblib-tui.bk/: Cargo.toml
roblib-tui.bk/src/: main.rs
roblib-tui/src/: app.rs  event.rs  handler.rs  main.rs  render.rs  ui.rs
