[package]
name = "roblib-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.22.0"
roblib-client = { git = "https://github.com/kareszklub/roblib-rs", features = ["roland", "async", "gpio"] }
tokio = { version = "1.30.0", features = ["rt"] }
